--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-__pycache__/
+lifeplanner/static
+lifeplanner/media
 *$py.class
 
 
@@ -7,9 +8,19 @@ __pycache__/
 
 *.sqlite3
 media/
-*.pyc
 *.db
 
-datadump.json
 
 .idea/*
+
+old_build/
+
+*.log
+*.pot
+*.pyc
+__pycache__/
+local_settings.py
+
+.env
+
+venv
